--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "react": "^16.3.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0",
     "react-scripts": "1.1.1"
   },
